# Volicord

./: AGENTS.md  Cargo.toml  README.ko.md  README.md
.github/workflows/: release.yml
crates/: AGENTS.md
crates/harness-cli/: Cargo.toml
crates/harness-cli/src/: agent_command.rs  host_config.rs  lib.rs  local_mcp_command.rs  main.rs  setup.rs
crates/harness-cli/src/host_integration/: claude_code.rs  codex.rs  generic.rs  verification.rs
crates/harness-cli/tests/: binary_admin.rs
crates/harness-core/src/: lib.rs  methods.rs  pipeline.rs
crates/harness-mcp/: Cargo.toml
crates/harness-mcp/src/: lib.rs  main.rs
crates/harness-mcp/tests/: binary_transport.rs
crates/harness-store/: Cargo.toml
crates/harness-store/src/: agent_integrations.rs  artifacts.rs  bootstrap.rs  core_pipeline.rs  error.rs  inspection.rs  lib.rs  migrations.rs  runtime_home.rs  sqlite.rs
crates/harness-store/tests/: storage_ddl_contract.rs
crates/harness-test-support/: Cargo.toml
crates/harness-test-support/src/: lib.rs
crates/harness-types/: Cargo.toml
crates/harness-types/src/: ids.rs  lib.rs  methods.rs  schema.rs  values.rs
crates/volicord-cli/: Cargo.toml
crates/volicord-cli/src/: agent_command.rs  changes_command.rs  connection_command.rs  doctor_command.rs  export_command.rs  guidance_template.rs  lib.rs  main.rs  project_context.rs  registration.rs  repository_guidance.rs  setup_command.rs  shell_path.rs  user_command.rs
crates/volicord-cli/src/host_integration/: claude_code.rs  codex.rs  config_edit.rs  contracts.rs  generic.rs  mod.rs
crates/volicord-cli/tests/: binary_admin.rs  guard_command.rs  mcp_transport.rs
crates/volicord-cli/tests/fixtures/host_contracts/claude_code/events/: post_tool_bash_write.json  pre_tool_bash_write.json  user_prompt_submit_judgment_command.json
crates/volicord-cli/tests/fixtures/host_contracts/codex/events/: post_tool_bash_write.json  pre_tool_bash_write.json  user_prompt_submit_judgment_command.json
crates/volicord-core/: Cargo.toml
crates/volicord-core/src/: lib.rs  pipeline.rs
crates/volicord-core/src/methods/: close_task.rs  intake.rs  judgment.rs  mod.rs  prepare_write.rs  reconcile_changes.rs  record_run.rs  session_watch.rs  stage_artifact.rs  status.rs  tests.rs  update_scope.rs
crates/volicord-core/src/policy/: access.rs  close_readiness.rs  evidence.rs  judgment_relevance.rs  mod.rs  path.rs  replay.rs  write_authorization.rs
crates/volicord-mcp/: Cargo.toml
crates/volicord-mcp/src/: lib.rs  main.rs
crates/volicord-mcp/tests/: binary_transport.rs
crates/volicord-store/: Cargo.toml
crates/volicord-store/src/: agent_connections.rs  agent_integrations.rs  artifacts.rs  bootstrap.rs  core_pipeline.rs  error.rs  inspection.rs  lib.rs  local_consent.rs  migrations.rs  runtime_home.rs  sqlite.rs
crates/volicord-store/tests/: storage_ddl_contract.rs
crates/volicord-test-support/: Cargo.toml
crates/volicord-test-support/src/: lib.rs
crates/volicord-types/: Cargo.toml
crates/volicord-types/src/: canonical.rs  lib.rs  methods.rs  schema.rs  values.rs
docs/: AGENTS.md  README.md  doc-index.yaml  terminology-map.yaml
docs/en/: 00-introduction.md  01-project-charter.md  02-strategy.md  03-kernel-spec.md  04-runtime-architecture.md  05-mcp-api-and-schemas.md  06-reference-mvp.md  07-document-projection.md  08-design-quality-policy-pack.md  09-agent-integration.md  10-user-guide.md  11-operations-and-conformance.md  99-authoring-guide.md  README.md  glossary.md  roadmap.md  start.md
docs/en/appendix/: A-template-library.md  B-surface-cookbook.md  C-later-roadmap.md  D-migration-notes.md
docs/en/development/: architecture.md  codebase-tour.md  request-lifecycle.md  testing-strategy.md
docs/en/getting-started/: installation.md  overview.md  quickstart.md
docs/en/guides/: agent-host-setup.md  agent-host-troubleshooting.md  agent-workflow.md  judgment-examples.md  multi-repository-agent-setup.md  surface-recipes.md  user-workflow.md
docs/en/later/: artifacts-and-evidence.md  assurance-profile.md  connectors-and-surfaces.md  future-fixtures.md  index.md  operations-profile.md  policy-and-conformance.md  security-and-assurance.md  workflow-and-collaboration.md
docs/en/learn/: concepts.md  harness-in-15-minutes.md  harness-in-one-task.md  one-task.md  overview.md  purpose-and-principles.md
docs/en/maintain/: authoring-guide.md  checks.md  document-charters.md  documentation-checks.md  documentation-policy.md  rewrite-acceptance-review.md  rewrite-plan.md  translation-guide.md  translation-policy.md  validation.md
docs/en/reference/: README.md  active-mvp-scope.md  admin-cli.md  agent-connection.md  agent-integration.md  conformance-fixtures.md  conformance.md  core-model.md  design-quality-policies.md  design-quality.md  document-projection.md  future-fixture-catalog.md  glossary.md  kernel.md  mcp-api-and-schemas.md  mcp-transport.md  operations-and-conformance.md  projection-and-templates.md  runtime-architecture.md  runtime-boundaries.md  scope.md  security-threat-model.md  security.md  storage-and-ddl.md  storage-artifacts.md  storage-ddl.md  storage-effects.md  storage-records.md  storage-versioning.md  storage.md  surface-cookbook.md  system-requirements.md  template-bodies.md
docs/en/use/: agent-guide.md  agent-session-flow.md  decision-packet-cookbook.md  judgment-examples.md  surface-recipes.md  user-guide.md
docs/ko/: 00-introduction.md  01-project-charter.md  02-strategy.md  03-kernel-spec.md  04-runtime-architecture.md  05-mcp-api-and-schemas.md  06-reference-mvp.md  07-document-projection.md  08-design-quality-policy-pack.md  09-agent-integration.md  10-user-guide.md  11-operations-and-conformance.md  99-authoring-guide.md  README.md  glossary.md  roadmap.md  start.md
docs/ko/appendix/: A-template-library.md  B-surface-cookbook.md  (+2 more)
scripts/: install.sh  smoke-test-binary.sh
tests/conformance/: Cargo.toml  baseline.rs
tests/integration/: Cargo.toml  mcp_connection.rs  mcp_surface.rs
xtask/: Cargo.toml
xtask/src/: lib.rs  main.rs
xtask/tests/: docs_check.rs
(+240 files in other folders)
