[workspace]
members = [
    "crates/harness-types",
    "crates/harness-store",
    "crates/harness-core",
    "crates/harness-cli",
    "crates/harness-mcp",
    "crates/harness-test-support",
    "tests/conformance",
    "tests/integration",
]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
