[workspace]
members = [
    "crates/volicord-types",
    "crates/volicord-store",
    "crates/volicord-core",
    "crates/volicord-cli",
    "crates/volicord-mcp",
    "crates/volicord-test-support",
    "tests/conformance",
    "tests/integration",
    "xtask",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.85"
version = "0.1.0"
