[package]
name = "harness-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
harness-store = { path = "../harness-store" }
harness-types = { path = "../harness-types" }
serde_json = "1"
sha2 = "0.10"
toml_edit = "0.22"

[dev-dependencies]
harness-store = { path = "../harness-store", features = ["test-support"] }
harness-test-support = { path = "../harness-test-support" }
rusqlite = { version = "0.32", features = ["bundled"] }

[[bin]]
name = "harness"
path = "src/main.rs"
