[package]
name = "harness-mcp"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
harness-core = { path = "../harness-core" }
harness-types = { path = "../harness-types" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
harness-store = { path = "../harness-store" }
harness-test-support = { path = "../harness-test-support" }

[lib]
path = "src/lib.rs"
