[package]
name = "harness-store"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
harness-types = { path = "../harness-types" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = "1"
serde_json = "1"

[dev-dependencies]
harness-test-support = { path = "../harness-test-support" }

[lib]
path = "src/lib.rs"
