[package]
name = "harness-test-support"
version.workspace = true
edition.workspace = true
publish = false

[dependencies]
harness-store = { path = "../harness-store" }
harness-types = { path = "../harness-types" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1"
tempfile = "3"

[lib]
path = "src/lib.rs"
