[package]
name = "volicord-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std"] }
volicord-store = { path = "../volicord-store" }
volicord-types = { path = "../volicord-types" }
serde = "1"
serde_json = "1"
sha2 = "0.10"

[dev-dependencies]
volicord-test-support = { path = "../volicord-test-support" }
rusqlite = { version = "0.32", features = ["bundled"] }

[lib]
path = "src/lib.rs"
