[package]
name = "volicord-store"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
volicord-types = { path = "../volicord-types" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = "1"
serde_json = "1"
sha2 = "0.10"

[features]
test-support = []

[dev-dependencies]
volicord-test-support = { path = "../volicord-test-support" }

[lib]
path = "src/lib.rs"
