[package]
name = "volicord-test-support"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
volicord-store = { path = "../volicord-store" }
volicord-types = { path = "../volicord-types" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde_json = "1"
tempfile = "3"

[lib]
path = "src/lib.rs"
