[package]
name = "volicord-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dependencies]
chrono = { version = "0.4", default-features = false, features = ["std"] }
getrandom = "0.4"
schemars = { version = "0.8", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"

[lib]
path = "src/lib.rs"
