[package]
name = "harness-conformance-tests"
version.workspace = true
edition.workspace = true
publish = false

[dev-dependencies]
chrono = { version = "0.4", default-features = false, features = ["std"] }
harness-core = { path = "../../crates/harness-core" }
harness-test-support = { path = "../../crates/harness-test-support" }
harness-types = { path = "../../crates/harness-types" }
serde_json = "1"

[[test]]
name = "baseline"
path = "baseline.rs"
