[package]
name = "volicord-conformance-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dev-dependencies]
chrono = { version = "0.4", default-features = false, features = ["std"] }
volicord-core = { path = "../../crates/volicord-core" }
volicord-test-support = { path = "../../crates/volicord-test-support" }
volicord-types = { path = "../../crates/volicord-types" }
serde_json = "1"

[[test]]
name = "baseline"
path = "baseline.rs"
