[package]
name = "volicord-integration-tests"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
publish = false

[dev-dependencies]
volicord-core = { path = "../../crates/volicord-core" }
volicord-mcp = { path = "../../crates/volicord-mcp" }
volicord-store = { path = "../../crates/volicord-store" }
volicord-test-support = { path = "../../crates/volicord-test-support" }
volicord-types = { path = "../../crates/volicord-types" }
rusqlite = { version = "0.32", features = ["bundled"] }
serde = "1"
serde_json = "1"

[[test]]
name = "mcp_connection"
path = "mcp_connection.rs"
